<resources>
    <string name="app_name">FoodBillApp</string>
    <string name="pizza">PIZZA</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="burger">BURGER</string>
    <string name="maggi">MAGGI</string>
    <string name="momos">MOMOS</string>
    <string name="coffee">COFFEE</string>
    <string name="reset">RESET</string>
    <string name="sum">SUM</string>
    <string name="next">NEXT</string>
    <string name="_20">20$</string>
    <string name="_100">10$</string>
    <string name="_10">10$</string>
    <string name="_1">1$</string>
    <string name="_1000">1$</string>
    <string name="_2">2$</string>
    <string name="_200">1$</string>
    <string name="_3">3$</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order_now">Order Now</string>
    <string name="total_price">Total Price</string>
    <string name="edit_order">Edit Order</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="login_page">Login Page</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>

</resources>
