<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="#E6E6E6"
    android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/coffee"
            android:layout_marginTop="-10dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20dp"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="200dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="225dp"
        android:id="@+id/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="280dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="305dp"
        android:inputType="textPassword"
        android:id="@+id/password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="20dp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="360dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="385dp"
        android:inputType="textPassword"
        android:id="@+id/confirm"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="460dp"
        android:text="@string/submit"
        android:layout_marginLeft="120dp"
        android:id="@+id/submit"/>
</RelativeLayout>